--- a/kafka-mesos.properties
+++ b/kafka-mesos.properties
@@ -4,20 +4,21 @@ debug=true
 # Mesos user
 mesos.user=vagrant
 
-# Mesos Master node hostname
-master.host=master
+# Master connection settings. Examples:
+# - master:5050
+# - master:5050,master2:5050
+# - zk://master:2181/mesos
+# - zk://username:password@master:2181
+# - zk://master:2181,master2:2181/mesos
+master.connect=master:5050
 
-#Mesos Master node port
-master.port=5050
+# Kafka zookeeper.connect. Examples:
+# - master:2181
+# - master:2181,master2:2181
+kafka.zk.connect=master:2181
 
-# Mesos' Zookeeper port
-master.zk.port=2181
-
-# Scheduler node hostname
-scheduler.host=master
-
-# Http server port where artifacts are available for download
-scheduler.port=7000
+# Scheduler url. Example: http://master:7000
+scheduler.url=http://master:7000
 
 # Kafka-Mesos framework failover
 failoverTimeout=36000
