Clarify config in the README. Set better defaults config values.

--- a/kafka-mesos.properties
+++ b/kafka-mesos.properties
@@ -1,8 +1,8 @@
 # Debug mode
 debug=true
 
-# Mesos user
-mesos.user=vagrant
+# Mesos user to run tasks. Leave blank to use your current system user.
+mesos.user=
 
 # Master connection settings. Examples:
 # - master:5050
@@ -10,15 +10,15 @@ mesos.user=vagrant
 # - zk://master:2181/mesos
 # - zk://username:password@master:2181
 # - zk://master:2181,master2:2181/mesos
-master.connect=master:5050
+master.connect=zk://localhost:2181/mesos
 
 # Kafka zookeeper.connect. Examples:
 # - master:2181
 # - master:2181,master2:2181
-kafka.zk.connect=master:2181
+kafka.zk.connect=localhost:2181
 
 # Scheduler url. Example: http://master:7000
-scheduler.url=http://master:7000
+scheduler.url=http://localhost:7000
 
 # Kafka-Mesos framework failover
 failoverTimeout=36000
