added plugable cluster storage with zk support

--- a/kafka-mesos.properties
+++ b/kafka-mesos.properties
@@ -1,6 +1,11 @@
 # Debug mode
 debug=true
 
+# Storage for cluster state. Examples:
+# - file:kafka-mesos.json
+# - zk:kafka-mesos
+storage=zk:kafka-mesos
+
 # Mesos user to run tasks. Leave blank to use your current system user.
 mesos.user=
 
