--- a/kafka-mesos.properties
+++ b/kafka-mesos.properties
@@ -3,8 +3,8 @@ debug=true
 
 # Storage for cluster state. Examples:
 # - file:kafka-mesos.json
-# - zk:kafka-mesos
-storage=zk:kafka-mesos
+# - zk:/kafka-mesos
+storage=zk:/kafka-mesos
 
 # Mesos user to run tasks. Leave blank to use your current system user.
 mesos.user=
