--- a/kafka-mesos.properties
+++ b/kafka-mesos.properties
@@ -4,7 +4,7 @@ debug=true
 # Storage for cluster state. Examples:
 # - file:kafka-mesos.json
 # - zk:/kafka-mesos
-storage=zk:/kafka-mesos
+clusterStorage=file:kafka-mesos.json
 
 # Mesos user to run tasks. Leave blank to use your current system user.
 mesos.user=
