--- a/kafka-mesos.properties
+++ b/kafka-mesos.properties
@@ -6,6 +6,9 @@ debug=true
 # - zk:/kafka-mesos
 clusterStorage=file:kafka-mesos.json
 
+# Framework id. Leave blank to use mesos generated
+framework.id=
+
 # Mesos user to run tasks. Leave blank to use your current system user.
 mesos.user=
 
