--- a/kafka-mesos.properties
+++ b/kafka-mesos.properties
@@ -6,9 +6,6 @@ debug=true
 # - zk:/kafka-mesos
 clusterStorage=file:kafka-mesos.json
 
-# Framework id. Leave blank to use mesos generated
-framework.id=
-
 # Mesos user to run tasks. Leave blank to use your current system user.
 mesos.user=
 
@@ -18,7 +15,7 @@ mesos.user=
 # - zk://master:2181/mesos
 # - zk://username:password@master:2181
 # - zk://master:2181,master2:2181/mesos
-master.connect=zk://localhost:2181/mesos
+mesos.connect=zk://localhost:2181/mesos
 
 # Kafka zookeeper.connect. Examples:
 # - master:2181
