--- a/kafka-mesos.properties
+++ b/kafka-mesos.properties
@@ -6,9 +6,6 @@ debug=true
 # - zk:/kafka-mesos
 clusterStorage=file:kafka-mesos.json
 
-# Mesos user to run tasks. Leave blank to use your current system user.
-mesos.user=
-
 # Master connection settings. Examples:
 # - master:5050
 # - master:5050,master2:5050
@@ -16,6 +13,12 @@ mesos.user=
 # - zk://username:password@master:2181
 # - zk://master:2181,master2:2181/mesos
 mesos.connect=zk://localhost:2181/mesos
+
+# Mesos user to run tasks. Leave blank to use your current system user.
+mesos.user=vagrant
+
+# Kafka-Mesos framework failover
+mesos.framework.timeout=36000
 
 # Kafka zookeeper.connect. Examples:
 # - master:2181
@@ -25,5 +28,3 @@ kafka.zk.connect=localhost:2181
 # Scheduler url. Example: http://master:7000
 scheduler.url=http://localhost:7000
 
-# Kafka-Mesos framework failover
-failoverTimeout=36000
