--- a/kafka-mesos.properties
+++ b/kafka-mesos.properties
@@ -4,7 +4,7 @@ debug=true
 # Storage for cluster state. Examples:
 # - file:kafka-mesos.json
 # - zk:/kafka-mesos
-clusterStorage=file:kafka-mesos.json
+cluster.storage=file:kafka-mesos.json
 
 # Master connection settings. Examples:
 # - master:5050
