mesos.framework.timeout now expressed as Period expression (1h, 30s, 1h, etc)

--- a/kafka-mesos.properties
+++ b/kafka-mesos.properties
@@ -18,7 +18,7 @@ mesos.connect=zk://localhost:2181/mesos
 mesos.user=vagrant
 
 # Kafka-Mesos framework failover
-mesos.framework.timeout=36000
+mesos.framework.timeout=1d
 
 # Kafka zookeeper.connect. Examples:
 # - master:2181
