replaced dots in option names to hyphens

--- a/kafka-mesos.properties
+++ b/kafka-mesos.properties
@@ -4,7 +4,7 @@ debug=true
 # Storage for cluster state. Examples:
 # - file:kafka-mesos.json
 # - zk:/kafka-mesos
-cluster.storage=file:kafka-mesos.json
+cluster-storage=file:kafka-mesos.json
 
 # Master connection settings. Examples:
 # - master:5050
@@ -12,19 +12,19 @@ cluster.storage=file:kafka-mesos.json
 # - zk://master:2181/mesos
 # - zk://username:password@master:2181
 # - zk://master:2181,master2:2181/mesos
-mesos.connect=zk://localhost:2181/mesos
+mesos-connect=zk://localhost:2181/mesos
 
 # Mesos user to run tasks. Leave blank to use your current system user.
-mesos.user=vagrant
+mesos-user=vagrant
 
 # Kafka-Mesos framework failover
-mesos.framework.timeout=1d
+mesos-framework-timeout=1d
 
 # Kafka zookeeper.connect. Examples:
 # - master:2181
 # - master:2181,master2:2181
-kafka.zk.connect=localhost:2181
+kafka-zk-connect=localhost:2181
 
 # Scheduler url. Example: http://master:7000
-scheduler.url=http://localhost:7000
+scheduler-url=http://localhost:7000
 
