--- a/kafka-mesos.properties
+++ b/kafka-mesos.properties
@@ -1,24 +1,13 @@
-# Debug mode
+# Scheduler options defaults. See `./kafka-mesos.sh help scheduler` for more details
 debug=true
 
-# Storage for cluster state. Examples:
-# - file:kafka-mesos.json
-# - zk:/kafka-mesos
+user=
+
 storage=file:kafka-mesos.json
 
-# Master connection settings. Examples:
-# - master:5050
-# - master:5050,master2:5050
-# - zk://master:2181/mesos
-# - zk://username:password@master:2181
-# - zk://master:2181,master2:2181/mesos
 master=zk://master:2181/mesos
 
-# Kafka zookeeper.connect. Examples:
-# - master:2181
-# - master:2181,master2:2181
 zk=master:2181
 
-# Scheduler url. Example: http://master:7000
 api=http://master:7000
 
