deleted kafka-mesos.properties as not required anymore

--- a/kafka-mesos.properties
+++ b/kafka-mesos.properties
@@ -1,7 +1,7 @@
 # Scheduler options defaults. See `./kafka-mesos.sh help scheduler` for more details
 debug=true
 
-user=
+user=vagrant
 
 storage=file:kafka-mesos.json
 
@@ -9,5 +9,5 @@ master=zk://master:2181/mesos
 
 zk=master:2181
 
-api=http://master:7000
+api=http://192.168.3.1:7000
 
