--- a/kafka-mesos.properties
+++ b/kafka-mesos.properties
@@ -7,7 +7,7 @@ storage=file:kafka-mesos.json
 
 master=zk://master:2181/mesos
 
-zk=master:2181/abc
+zk=master:2181
 
 api=http://192.168.3.1:7000
 
