Move to gradle 2.8

--- a/build.gradle
+++ b/build.gradle
@@ -58,3 +58,7 @@ jar {
     }
     manifest.attributes("Main-Class": "ly.stealth.mesos.kafka.Cli")
 }
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.8'
+}
