--- a/kafka-mesos.properties
+++ b/kafka-mesos.properties
@@ -3,11 +3,13 @@ debug=true
 
 user=vagrant
 
-storage=file:kafka-mesos.json
+storage=zk:mesos-kafka-scheduler
 
 master=master:5050
 
-zk=master:2181
+zk=master:2181/chroot
 
-api=http://192.168.3.1:7000
-
+#for testing on the vagrant master via ./kafka-mesos.sh scheduler
+#you will eventually want to run this on a scheduler i.e marathon
+#change the IP to what is service discoverable & routable for your setup
+api=http://192.168.3.5:7000
