--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ jar.archiveName = "kafka-mesos-${version}.jar"
 
 repositories {
     mavenCentral()
+    flatDir { dirs 'lib' }
 }
 
 buildDir = 'out/gradle'
@@ -24,6 +25,7 @@ sourceSets {
 dependencies {
     compile "org.scala-lang:scala-library:2.10.6"
     compile "org.apache.mesos:mesos:0.25.0"
+    compile name: "util-mesos-0.0.1.0"
     compile "com.google.protobuf:protobuf-java:2.5.0"
     compile "log4j:log4j:1.2.17"
     compile "net.sf.jopt-simple:jopt-simple:4.8"
