--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,10 @@ version = new File('src/scala/ly/stealth/mesos/kafka/Scheduler.scala').readLines
 
 jar.archiveName = "kafka-mesos-${version}.jar"
 
+def mesosVersion="0.25.0"
+def kafkaVersion="0.8.1.1"
+def scalaVersion="2.10"
+
 repositories {
     mavenCentral()
     flatDir { dirs 'lib' }
@@ -25,23 +29,24 @@ sourceSets {
     }
 }
 
+def jettyVersion = "9.0.4.v20130625"
 dependencies {
-    compile "org.scala-lang:scala-library:2.10.6"
-    compile "org.apache.mesos:mesos:0.25.0"
+    compile "org.scala-lang:scala-library:$scalaVersion"
+    compile "org.apache.mesos:mesos:$mesosVersion"
     compile name: "util-mesos-0.1.0.0"
     compile "com.google.protobuf:protobuf-java:2.5.0"
     compile "log4j:log4j:1.2.17"
     compile "net.sf.jopt-simple:jopt-simple:4.8"
-    compile "org.eclipse.jetty:jetty-http:9.0.4.v20130625"
-    compile "org.eclipse.jetty:jetty-io:9.0.4.v20130625"
-    compile "org.eclipse.jetty:jetty-security:9.0.4.v20130625"
-    compile "org.eclipse.jetty:jetty-server:9.0.4.v20130625"
-    compile "org.eclipse.jetty:jetty-servlet:9.0.4.v20130625"
-    compile "org.eclipse.jetty:jetty-util:9.0.4.v20130625"
+    compile "org.eclipse.jetty:jetty-http:$jettyVersion"
+    compile "org.eclipse.jetty:jetty-io:$jettyVersion"
+    compile "org.eclipse.jetty:jetty-security:$jettyVersion"
+    compile "org.eclipse.jetty:jetty-server:$jettyVersion"
+    compile "org.eclipse.jetty:jetty-servlet:$jettyVersion"
+    compile "org.eclipse.jetty:jetty-util:$jettyVersion"
     compile "javax.servlet:javax.servlet-api:3.0.1"
     testCompile 'junit:junit:4.12'
 
-    compile ('org.apache.kafka:kafka_2.10:0.8.1.1') {
+    compile ("org.apache.kafka:kafka_$scalaVersion:$kafkaVersion") {
         exclude group: "javax.jms"
         exclude group: "com.sun.jdmk"
         exclude group: "com.sun.jmx"
