--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ jar.archiveName = "kafka-mesos-${version}.jar"
 
 def mesosVersion="0.25.0"
 def kafkaVersion="0.8.1.1"
-def scalaVersion="2.10"
+def kafkaScalaVersion="2.10"
 
 repositories {
     mavenCentral()
@@ -34,7 +34,7 @@ sourceSets {
 
 def jettyVersion = "9.0.4.v20130625"
 dependencies {
-    compile "org.scala-lang:scala-library:$scalaVersion"
+    compile "org.scala-lang:scala-library:2.10.6"
     compile "org.apache.mesos:mesos:$mesosVersion"
     compile name: "util-mesos-0.1.0.0"
     compile "com.google.protobuf:protobuf-java:2.5.0"
@@ -49,7 +49,7 @@ dependencies {
     compile "javax.servlet:javax.servlet-api:3.0.1"
     testCompile 'junit:junit:4.12'
 
-    compile ("org.apache.kafka:kafka_$scalaVersion:$kafkaVersion") {
+    compile ("org.apache.kafka:kafka_$kafkaScalaVersion:$kafkaVersion") {
         exclude group: "javax.jms"
         exclude group: "com.sun.jdmk"
         exclude group: "com.sun.jmx"
@@ -95,6 +95,6 @@ distTar {
 
 import de.undercouch.gradle.tasks.download.Download
 task downloadKafka(type: Download) {
-    src "https://archive.apache.org/dist/kafka/${kafkaVersion}/kafka_${scalaVersion}-${kafkaVersion}.tgz"
+    src "https://archive.apache.org/dist/kafka/${kafkaVersion}/kafka_${kafkaScalaVersion}-${kafkaVersion}.tgz"
     dest rootDir
 }
