make docker shutdown faster.
When the JVM runs as PID 1, it doesn't try to stop in response to
SIGTERM signals. By forking and forwarding the SIGTERM signal we regain
normal SIGTERM behavior.

--- a/src/docker/Dockerfile
+++ b/src/docker/Dockerfile
@@ -36,8 +36,11 @@ RUN \
 
 # Add kafka-mesos & kafka
 COPY .docker/kafka* /opt/kafka-mesos/
+COPY ./docker-entrypoint.sh /docker-entrypoint.sh
 
 WORKDIR /opt/kafka-mesos
 EXPOSE 7000
 
-ENTRYPOINT ["/usr/bin/java", "-jar", "/opt/kafka-mesos/kafka-mesos-0.9.5.0.jar", "scheduler"]
+ENTRYPOINT ["/docker-entrypoint.sh"]
+
+CMD ["scheduler"]
