--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ java:
 - 1.7
 - 1.8
 
-before_install: wget https://archive.apache.org/dist/kafka/0.8.2.1/kafka_2.10-0.8.2.1.tgz
+before_install: wget http://www-us.apache.org/dist/kafka/0.8.2.2/kafka_2.10-0.8.2.2.tgz
 
 install: ./gradlew jar
