Correctly test against multiple JDKs. (#265)

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,9 @@
 # limitations under the License.
 
 language: java
-java:
-  - 1.7
-  - 1.8
+jdk:
+  - oraclejdk8
+  - oraclejdk7
 before_install: wget http://www-us.apache.org/dist/kafka/0.8.2.2/kafka_2.10-0.8.2.2.tgz
 cache:
   directories:
