--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,22 @@
 # limitations under the License.
 
 language: java
+sudo: false
+
 jdk:
   - oraclejdk8
   - oraclejdk7
-before_install:
-  - 'wget http://www-us.apache.org/dist/kafka/0.8.2.2/kafka_2.10-0.8.2.2.tgz'
-  - 'export JAVA_OPTS="-XX:MaxPermSize=512m -Xms1g -Xmx3g -Xss2m -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC"'
+env:
+  - KAFKA_VER=0.10.1.1
+  - KAFKA_VER=0.9.0.1
+  - KAFKA_VER=0.8.2.2
+matrix:
+  exclude:
+  - jdk: oraclejdk7
+    env: KAFKA_VER=0.9.0.1
+  - jdk: oraclejdk7
+    env: KAFKA_VER=0.8.2.2
+
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
@@ -28,5 +38,8 @@ cache:
     - $HOME/.m2/repository
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
-sudo: false
-install: ./gradlew jar
+
+install: true
+before_script:
+  - 'export JAVA_OPTS="-XX:MaxPermSize=512m -Xms1g -Xmx3g -Xss2m -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC"'
+script: ./gradlew jar -P$KAFKA_VER
