--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,11 @@ plugins {
     id "com.github.hierynomus.license" version "0.13.1"
 }
 
+def scalaVersion = "2.11.8"
 def mesosVersion = "0.28.0"
 ext.kafkaVersion = project.hasProperty("kafkaVersion") ? project.getProperty("kafkaVersion") : "0.10.1.1"
 def kafkaMajorVersion="${kafkaVersion.split("\\.").take(2).join("_")}"
-def kafkaScalaVersion="2.10"
+def kafkaScalaVersion=scalaVersion.split("\\.").take(2).join(".")
 def jettyVersion = "9.0.4.v20130625"
 def jerseyVersion = "2.24"
 def jacksonVersion = "2.8.2"
@@ -19,7 +20,6 @@ version = new File('src/scala/main/ly/stealth/mesos/kafka/Config.scala')
         .findResult({ x -> x.contains("val value = \"") ? x.substring(x.indexOf("\"") + 1, x.lastIndexOf("\"")) : null })
 
 jar.archiveName = "kafka-mesos-${version}-kafka_$kafkaScalaVersion-${kafkaVersion.replace('_', '.')}.jar"
-
 
 repositories {
     mavenCentral()
@@ -51,7 +51,7 @@ sourceSets {
 }
 
 dependencies {
-    compile "org.scala-lang:scala-library:2.10.6"
+    compile "org.scala-lang:scala-library:$scalaVersion"
     compile "org.apache.mesos:mesos:$mesosVersion"
     compile name: "util-mesos-0.1.0.0"
     compile "com.google.protobuf:protobuf-java:2.5.0"
